--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "pwa-chrome",
+            "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "d:\\hello\\hello\\index.html"
+            "url":"http://localhost:8080/",
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
